--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.0.0')
 
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'androidx.biometric:biometric:1.0.1'
 }
