--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,13 @@ android {
 
     defaultConfig {
         applicationId "com.koursh.inbar.notes"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName '0.0.1'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionNameSuffix 'Alpha'
     }
 
     buildTypes {
@@ -22,6 +23,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -56,4 +61,5 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-auth'
     implementation 'androidx.biometric:biometric:1.0.1'
+
 }
